load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "tools",
    package_name = "@nguniversal/common/tools",
    srcs = glob([
        "src/*.ts",
        "*.ts",
    ]),
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
        "@npm//critters",
    ],
)
