load("//tools:defaults.bzl", "jasmine_node_test", "pkg_npm", "ts_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "schematics_assets",
    srcs = glob([
        "**/files/**/*",
        "**/*.json",
    ]) + [
        "README.md",
    ],
)

ts_library(
    name = "schematics",
    package_name = "@nguniversal/express-engine/schematics",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "testing/**/*",
            "**/*.spec.ts",
            "**/files/**/*",
        ],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schematics",
        "@npm//@schematics/angular",
        "@npm//rxjs",
        "@npm//typescript",
    ],
)

# This package is intended to be combined into the main @nguniversal/express-engine package as a dep.
pkg_npm(
    name = "npm_package",
    srcs = [":schematics_assets"],
    deps = [":schematics"],
)

### Testing rules

jasmine_node_test(
    name = "unit_tests",
    srcs = [":schematics_test_sources"],
    data = [
        ":schematics_assets",
    ],
)

ts_library(
    name = "schematics_test_sources",
    testonly = True,
    srcs = glob(
        [
            "testing/*.ts",
            "**/*.spec.ts",
        ],
        exclude = ["**/files/**/*"],
    ),
    deps = [
        ":schematics",
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schematics",
        "@npm//@schematics/angular",
    ],
)
