load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

exports_files(["package.json"])

ng_module(
    name = "tokens",
    srcs = glob([
        "*.ts",
    ]),
    module_name = "@nguniversal/express-engine/tokens",
    deps = [
        "@npm//@angular/core",
        "@npm//@types/express",
    ],
)
