load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

exports_files(["package.json"])

ng_module(
    name = "tokens",
    package_name = "@nguniversal/express-engine/tokens",
    srcs = glob([
        "*.ts",
    ]),
    deps = [
        "@npm//@angular/core",
        "@npm//@types/express",
    ],
)
