load("//tools:defaults.bzl", "jasmine_node_test", "ng_test_library", "npm_package", "ts_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "schematics_assets",
    srcs = glob([
        "**/files/**/*",
        "**/*.json",
    ]) + [
        "README.md",
    ],
)

ts_library(
    name = "schematics",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "testing/**/*",
            "**/*.spec.ts",
            "**/files/**/*",
        ],
    ),
    module_name = "@nguniversal/hapi-engine/schematics",
    tsconfig = ":tsconfig.json",
    deps = [
        "//modules/common/schematics",
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schematics",
        "@npm//@schematics/angular",
        "@npm//@types/jasmine",
        "@npm//rxjs",
        "@npm//typescript",
    ],
)

# This package is intended to be combined into the main @nguniversal/hapi-engine package as a dep.
npm_package(
    name = "npm_package",
    srcs = [":schematics_assets"],
    deps = [":schematics"],
)

### Testing rules

jasmine_node_test(
    name = "unit_tests",
    srcs = [":schematics_test_sources"],
    data = [
        ":schematics_assets",
        "//modules/common/schematics:npm_package",
    ],
)

ng_test_library(
    name = "schematics_test_sources",
    srcs = glob(
        [
            "testing/*.ts",
            "**/*.spec.ts",
        ],
        exclude = ["**/files/**/*"],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        ":schematics",
        "//modules/common/schematics",
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schematics",
        "@npm//@schematics/angular",
    ],
)
