load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "tokens",
    srcs = glob([
        "*.ts",
    ]),
    module_name = "@nguniversal/hapi-engine/tokens",
    deps = [
        "@angular//packages/core",
        "@ngudeps//@types/hapi",
    ],
)
