load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "tokens",
    srcs = glob([
        "*.ts",
    ]),
    module_name = "@nguniversal/hapi-engine/tokens",
    deps = [
        "@npm//@angular/core",
        "@npm//@hapi/hapi",
        "@npm//@types/hapi__hapi",
    ],
)
