load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "tokens",
    package_name = "@nguniversal/hapi-engine/tokens",
    srcs = glob([
        "*.ts",
    ]),
    deps = [
        "@npm//@angular/core",
        "@npm//@hapi/hapi",
        "@npm//@types/hapi__hapi",
    ],
)
