load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("//tools:interop.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "builder",
    testonly = True,
    srcs = glob(
        include = [
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/*_spec.ts",
        ],
    ),
    data = glob(["projects/**/*"]),
    deps = [
        "//:root_modules/rxjs",
        "//packages/angular_devkit/architect:architect_rjs",
        "//packages/angular_devkit/architect/node:node_rjs",
        "//packages/angular_devkit/architect/testing:testing_rjs",
        "//packages/angular_devkit/core:core_rjs",
        "//packages/angular_devkit/core/node:node_rjs",
    ],
)

ts_project(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob(
        include = [
            "src/**/*_spec.ts",
        ],
    ),
    deps = [
        ":builder_rjs",
        "//packages/angular_devkit/architect/testing:testing_rjs",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
