load("//tools:defaults.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "utils",
    testonly = True,
    srcs = glob(["**/*.ts"]),
    data = [
        "//tests/e2e/ng-snapshot",
    ],
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/@types/semver",
        "//:node_modules/fast-glob",
        "//:node_modules/protractor",
        "//:node_modules/puppeteer",
        "//:node_modules/semver",
        "//:node_modules/verdaccio",
        "//:node_modules/verdaccio-auth-memory",
        "//tests:node_modules/@types/tar-stream",
        "//tests:node_modules/tar-stream",
        "//tests:node_modules/tree-kill",
    ],
)
